test/TestSuite/Scheduler/Errors/task_underspecified_1.tjp
project test "Test" "1.0" 2009-02-13 +1m

resource r "R"

# MARK: error 6 task_underspecified
task t "T" {
  booking r 2009-02-16 { sloppy 2 }
}
